# galfit-builder

./: .gitignore  README.md  config.toml  pyproject.toml
src/galfit_builder/: __init__.py
src/galfit_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/galfit_builder/.claude/: settings.local.json
src/galfit_builder/builders/: __init__.py  build_devauc.py  build_edgedisk.py  build_expdisk.py  build_ferrer.py  build_gaussian.py  build_king.py  build_moffat.py  build_nuker.py  build_psf.py  build_sersic.py  build_sky.py  builder_utils.py  component_builder.py  region_utils.py
src/galfit_builder/components/: __init__.py  base.py  devauc.py  edgedisk.py  expdisk.py  ferrer.py  gaussian.py  king.py  moffat.py  nuker.py  psf.py  sersic.py  sky.py
src/galfit_builder/config/: __init__.py  config.toml  example_config.toml  loader.py
src/galfit_builder/constraints/: __init__.py  constraint_builder.py
src/galfit_builder/controls/: __init__.py  controls.py
src/galfit_builder/io/: __init__.py  parse_regions.py
src/galfit_builder/masking/: __init__.py  region_mask.py
src/galfit_builder/pipeline/: __init__.py  cutout.py  freeze.py  run.py  to_regions.py
tests/: test_component_builders.py  test_comprehensive.py  test_configs.py  test_pipeline.py
